# fwgsl

./: AGENTS.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES.md  docs-language-surface-upgrade.md  mise.toml  spec.md
.github/workflows/: ci.yml  pages.yml
crates/fwgsl_allocator/: Cargo.toml
crates/fwgsl_ast/: Cargo.toml
crates/fwgsl_ast_lowering/: Cargo.toml
crates/fwgsl_ast_lowering/src/: lib.rs
crates/fwgsl_cli/: Cargo.toml
crates/fwgsl_cli/src/: main.rs
crates/fwgsl_cst/: Cargo.toml
crates/fwgsl_diagnostics/: Cargo.toml
crates/fwgsl_formatter/: Cargo.toml
crates/fwgsl_hir/: Cargo.toml
crates/fwgsl_ide/: Cargo.toml
crates/fwgsl_ide/src/: catalog.rs  lib.rs
crates/fwgsl_integration_tests/: Cargo.toml
crates/fwgsl_integration_tests/tests/: integration.rs
crates/fwgsl_language_server/: Cargo.toml
crates/fwgsl_language_server/src/: catalog.rs  lib.rs  main.rs
crates/fwgsl_mir/: Cargo.toml
crates/fwgsl_parser/: Cargo.toml
crates/fwgsl_parser/src/: cfg_eval.rs  layout.rs  lexer.rs  lib.rs  module_merge.rs  module_resolver.rs  parser.rs  prelude.rs  virtual_fs.rs
crates/fwgsl_parser/tests/: language_surface.rs  snapshot.rs
crates/fwgsl_parser/tests/snapshots/: snapshot__snapshot_layout_tokens.snap  snapshot__snapshot_lex_tokens.snap  snapshot__snapshot_parse_entry_point.snap  snapshot__snapshot_parse_if.snap  snapshot__snapshot_parse_lambda.snap  snapshot__snapshot_parsed_program.snap
crates/fwgsl_semantic/: Cargo.toml
crates/fwgsl_semantic/src/: lib.rs
crates/fwgsl_span/: Cargo.toml
crates/fwgsl_syntax/: Cargo.toml
crates/fwgsl_typechecker/: Cargo.toml
crates/fwgsl_wasm/: Cargo.toml
crates/fwgsl_wasm/src/: lib.rs
crates/fwgsl_wgsl_codegen/: Cargo.toml
crates/shadml_allocator/: Cargo.toml
crates/shadml_ast/: Cargo.toml
crates/shadml_ast_lowering/: Cargo.toml
crates/shadml_ast_lowering/src/: lib.rs
crates/shadml_cli/: Cargo.toml
crates/shadml_cli/src/: main.rs
crates/shadml_cst/: Cargo.toml
crates/shadml_diagnostics/: Cargo.toml
crates/shadml_formatter/: Cargo.toml
crates/shadml_hir/: Cargo.toml
crates/shadml_ide/: Cargo.toml
crates/shadml_ide/src/: catalog.rs  lib.rs
crates/shadml_integration_tests/: Cargo.toml
crates/shadml_integration_tests/src/: lib.rs
crates/shadml_integration_tests/tests/: integration.rs
crates/shadml_language_server/: Cargo.toml
crates/shadml_language_server/src/: lib.rs  main.rs
crates/shadml_mir/: Cargo.toml
crates/shadml_parser/: Cargo.toml
crates/shadml_parser/src/: cfg_eval.rs  layout.rs  lexer.rs  module_merge.rs  module_resolver.rs  parser.rs  prelude.rs  virtual_fs.rs
crates/shadml_parser/tests/: language_surface.rs  snapshot.rs
crates/shadml_parser/tests/snapshots/: snapshot__snapshot_layout_tokens.snap  snapshot__snapshot_lex_tokens.snap  snapshot__snapshot_parse_entry_point.snap  snapshot__snapshot_parse_if.snap  snapshot__snapshot_parse_lambda.snap  snapshot__snapshot_parsed_program.snap
crates/shadml_semantic/: Cargo.toml
crates/shadml_semantic/src/: lib.rs
crates/shadml_span/: Cargo.toml
crates/shadml_syntax/: Cargo.toml
crates/shadml_typechecker/: Cargo.toml
crates/shadml_wasm/: Cargo.toml
crates/shadml_wasm/src/: lib.rs
crates/shadml_wgsl_codegen/: Cargo.toml
editors/helix/: languages.toml  run-helix.sh
editors/vscode/: language-configuration.json  package.json  tsconfig.json
editors/zed/: extension.toml  run-zed.sh
examples/: Debug.shadml  README.md  adt-match.shadml  bitfield.fwgsl  bitwise-ops.shadml  compute-basic.fwgsl  compute-basic.shadml  conditional-compilation.fwgsl  conditional-compilation.shadml  const-promotion.fwgsl  const-promotion.shadml  dependent-types.fwgsl  dependent-types.shadml  doc-comments.fwgsl  enlightenment-stars.fwgsl  enlightenment-stars.shadml  enum-discriminants.fwgsl  generic-data.fwgsl  hello.fwgsl  language-surface-upgrade.fwgsl  method-syntax.fwgsl  option-result.fwgsl  option-result.shadml  prelude-utils.fwgsl  prelude-utils.shadml  record-update.shadml  tensor-aliases.fwgsl  tensor-aliases.shadml  traits.fwgsl  typed-bitfield.fwgsl  typed-bitfield.shadml  vec-literals.fwgsl  when-guards.fwgsl  when-guards.shadml  where.shadml
examples/modules/: Main.fwgsl  Main.shadml  ModuleMain.fwgsl  ModuleMain.shadml  Particle.shadml  Utils.fwgsl  Utils.shadml
examples/shadorial/: 01-hello-shader.fwgsl  01-hello-shader.shadml  02-uniforms.fwgsl  02-uniforms.shadml  03-colors-gradients.fwgsl  03-colors-gradients.shadml  04-sin-wave.fwgsl  05-saw-triangle-wave.fwgsl  05-saw-triangle-wave.shadml  06-pulse-wave.fwgsl  06-pulse-wave.shadml  07-noise-wave.fwgsl  07-noise-wave.shadml  08-wave-composition.fwgsl  09-shapes-sdf.fwgsl  10-light-reflection.fwgsl  11-animation.fwgsl  11-animation.shadml  12-noise.fwgsl  13-particles.fwgsl  14-fluid-water.fwgsl  15-fluid-smoke.fwgsl  16-glitch.fwgsl  16-glitch.shadml  17-geometric.fwgsl  17-geometric.shadml  18-pixel-art.fwgsl  18-pixel-art.shadml  19-three-interactive.fwgsl
fixtures/: adt.fwgsl  hello.fwgsl  particle.shadml
playground/: app.js  example-sources.js  index.html  style.css  svg-preview.js
playground/examples/: svg-vue-logo.fwgsl
prelude/: prelude.fwgsl  prelude.shadml
tree-sitter-fwgsl/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
tree-sitter-shadml/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
tree-sitter-shadml/bindings/c/: tree-sitter-shadml.pc.in
tree-sitter-shadml/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-shadml/bindings/node/: binding.cc
tree-sitter-shadml/bindings/python/tree_sitter_shadml/: __init__.py  binding.c
tree-sitter-shadml/bindings/rust/: build.rs  lib.rs
tree-sitter-shadml/bindings/swift/TreeSitterShadml/: shadml.h
tree-sitter-shadml/queries/: highlights.scm  textobjects.scm
tree-sitter-shadml/runtime/queries/shadml/: indents.scm  injections.scm  locals.scm
tree-sitter-shadml/src/: grammar.json  node-types.json  parser.c  scanner.c
(+59 files in other folders)
