[workspace]
resolver = "2"
exclude = ["tree-sitter-shadml"]
members = [
    "crates/shadml_allocator",
    "crates/shadml_span",
    "crates/shadml_diagnostics",
    "crates/shadml_ide",
    "crates/shadml_syntax",
    "crates/shadml_cst",
    "crates/shadml_ast",
    "crates/shadml_parser",
    "crates/shadml_ast_lowering",
    "crates/shadml_typechecker",
    "crates/shadml_semantic",
    "crates/shadml_hir",
    "crates/shadml_mir",
    "crates/shadml_wgsl_codegen",
    "crates/shadml_formatter",
    "crates/shadml_cli",
    "crates/shadml_wasm",
    "crates/shadml_language_server",
    "crates/shadml_integration_tests",
]
# shadml_wasm requires wasm32 target, so exclude it from default workspace operations
default-members = [
    "crates/shadml_allocator",
    "crates/shadml_span",
    "crates/shadml_diagnostics",
    "crates/shadml_ide",
    "crates/shadml_syntax",
    "crates/shadml_cst",
    "crates/shadml_ast",
    "crates/shadml_parser",
    "crates/shadml_ast_lowering",
    "crates/shadml_typechecker",
    "crates/shadml_semantic",
    "crates/shadml_hir",
    "crates/shadml_mir",
    "crates/shadml_wgsl_codegen",
    "crates/shadml_formatter",
    "crates/shadml_cli",
    "crates/shadml_language_server",
    "crates/shadml_integration_tests",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
shadml_allocator = { path = "crates/shadml_allocator" }
shadml_span = { path = "crates/shadml_span" }
shadml_diagnostics = { path = "crates/shadml_diagnostics" }
shadml_ide = { path = "crates/shadml_ide" }
shadml_syntax = { path = "crates/shadml_syntax" }
shadml_cst = { path = "crates/shadml_cst" }
shadml_ast = { path = "crates/shadml_ast" }
shadml_parser = { path = "crates/shadml_parser" }
shadml_ast_lowering = { path = "crates/shadml_ast_lowering" }
shadml_typechecker = { path = "crates/shadml_typechecker" }
shadml_semantic = { path = "crates/shadml_semantic" }
shadml_hir = { path = "crates/shadml_hir" }
shadml_mir = { path = "crates/shadml_mir" }
shadml_wgsl_codegen = { path = "crates/shadml_wgsl_codegen" }
shadml_formatter = { path = "crates/shadml_formatter" }
shadml_language_server = { path = "crates/shadml_language_server" }

bumpalo = { version = "3", features = ["collections"] }
compact_str = "0.8"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
insta = "1"
naga = { version = "29", features = ["wgsl-in"] }

[profile.release]
lto = true
codegen-units = 1
