[package]
name = "tree-sitter-shadml"
description = "Shadmlsl grammar for tree-sitter"
version = "0.0.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "shadml"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-shadml"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
tree-sitter = ">=0.25"

[build-dependencies]
cc = "1.0.87"
