[package]
name = "fwgsl_ast_lowering"
edition.workspace = true
version.workspace = true

[dependencies]
fwgsl_parser = { workspace = true }
fwgsl_typechecker = { workspace = true }
fwgsl_semantic = { workspace = true }
fwgsl_hir = { workspace = true }
fwgsl_diagnostics = { workspace = true }
fwgsl_span = { workspace = true }
