[package]
name = "fwgsl_cli"
edition.workspace = true
version.workspace = true

[[bin]]
name = "fwgsl"
path = "src/main.rs"

[dependencies]
fwgsl_parser = { workspace = true }
fwgsl_typechecker = { workspace = true }
fwgsl_semantic = { workspace = true }
fwgsl_ast_lowering = { workspace = true }
fwgsl_hir = { workspace = true }
fwgsl_mir = { workspace = true }
fwgsl_wgsl_codegen = { workspace = true }
fwgsl_diagnostics = { workspace = true }
fwgsl_span = { workspace = true }
miette = { workspace = true }
