[package]
name = "fwgsl_ide"
edition.workspace = true
version.workspace = true

[dependencies]
fwgsl_parser = { workspace = true }
fwgsl_semantic = { workspace = true }
fwgsl_span = { workspace = true }
fwgsl_syntax = { workspace = true }
fwgsl_typechecker = { workspace = true }
lsp-types = "0.94"

[dev-dependencies]
insta = { workspace = true }
