[package]
name = "fwgsl_wasm"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fwgsl_parser = { workspace = true }
fwgsl_typechecker = { workspace = true }
fwgsl_semantic = { workspace = true }
fwgsl_ast_lowering = { workspace = true }
fwgsl_hir = { workspace = true }
fwgsl_mir = { workspace = true }
fwgsl_wgsl_codegen = { workspace = true }
fwgsl_diagnostics = { workspace = true }
fwgsl_span = { workspace = true }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
