[package]
name = "shadml_ast_lowering"
edition.workspace = true
version.workspace = true

[dependencies]
shadml_parser = { workspace = true }
shadml_typechecker = { workspace = true }
shadml_semantic = { workspace = true }
shadml_hir = { workspace = true }
shadml_diagnostics = { workspace = true }
shadml_span = { workspace = true }
