[package]
name = "shadml_integration_tests"
edition.workspace = true
version.workspace = true
publish = false

[dependencies]
shadml_parser = { workspace = true }
shadml_semantic = { workspace = true }
shadml_ast_lowering = { workspace = true }
shadml_typechecker = { workspace = true }
shadml_hir = { workspace = true }
shadml_mir = { workspace = true }
shadml_wgsl_codegen = { workspace = true }
shadml_diagnostics = { workspace = true }
shadml_span = { workspace = true }
shadml_syntax = { workspace = true }
naga = { workspace = true }
